# NonLinearSolver

./: .gitignore  CMakeLists.txt  Doxyfile
code/: Aitken.cpp  Aitken.hpp  Bisection.cpp  Bisection.hpp  CMakeLists.txt  Chord.cpp  Chord.hpp  EquationTools.cpp  EquationTools.h  Equations.cpp  Equations.hpp  EquationsControl.cpp  EquationsControl.h  Exception.cpp  Exception.hpp  Expression.cpp  Expression.hpp  ExpressionSystem.cpp  ExpressionSystem.hpp  FakeMain.cpp  FileReader.cpp  FileReader.hpp  FixedPoint.cpp  FixedPoint.hpp  Gauss.cpp  Gauss.h  Helper.cpp  Helper.h  Helper.hpp  InitialVector.cpp  InitialVector.hpp  Jacobian.cpp  Jacobian.h  Main.cpp  Newton.cpp  Newton.hpp  NewtonSystem.cpp  NewtonSystem.hpp  NonlinearSolver.cpp  NonlinearSolver.hpp  (+16 more)
code/testfiles/: _equations.txt
html/: _aitken_8hpp_source.html  _bisection_8hpp_source.html  _chord_8hpp_source.html  _equation_tools_8h_source.html  _equations_8hpp_source.html  _equations_control_8h_source.html  _exception_8hpp_source.html  _expression_8hpp_source.html  _expression_system_8hpp_source.html  _fixed_point_8hpp_source.html  _gauss_8h_source.html  _helper_8hpp_source.html  _initial_vector_8hpp_source.html  _jacobian_8h_source.html  _newton_8hpp_source.html  _newton_system_8hpp_source.html  _nonlinear_solver_8hpp_source.html  _nonlinear_systems_solver_8hpp_source.html  _test_suit_8h_source.html  _tests_8h_source.html  annotated.html  class_aitken-members.html  class_aitken.html  class_bisection-members.html  class_bisection.html  class_chord-members.html  class_chord.html  class_equation_tools-members.html  class_equation_tools.html  class_equations-members.html  class_equations.html  class_equations_control-members.html  class_equations_control.html  class_exception-members.html  class_exception.html  class_expression-members.html  class_expression.html  class_expression_system-members.html  class_expression_system.html  class_fixed_point-members.html  (+30 more)
html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_14.js  all_16.js  all_2.js  all_3.js  (+51 more)
latex/: annotated.tex  class_aitken.eps  class_aitken.tex  class_bisection.eps  class_bisection.tex  class_chord.eps  class_chord.tex  class_equation_tools.eps  class_equation_tools.tex  class_equations.eps  class_equations.tex  class_equations_control.eps  class_equations_control.tex  class_exception.tex  class_expression.tex  class_expression_system.tex  class_fixed_point.eps  class_fixed_point.tex  class_gauss.eps  class_gauss.tex  class_helper.tex  class_initial_vector.tex  class_jacobian.eps  class_jacobian.tex  class_newton.eps  class_newton.tex  class_newton_system.eps  class_newton_system.tex  class_nonlinear_solver.eps  class_nonlinear_solver.tex  class_nonlinear_systems_solver.eps  class_nonlinear_systems_solver.tex  class_test_suit.tex  dir_050edd66366d13764f98250ef6db77f6.tex  files.tex  hierarchy.tex  refman.tex  string_8hpp.tex
report/: nonlinear.aux  nonlinear.run.xml  nonlinear.tex  nonlinear.tex~
